--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>801</width>
-    <height>616</height>
+    <width>614</width>
+    <height>452</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>5</x>
       <y>5</y>
-      <width>790</width>
-      <height>450</height>
+      <width>601</width>
+      <height>321</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -37,7 +37,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>500</y>
+      <y>340</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -50,7 +50,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>500</y>
+      <y>340</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -63,7 +63,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>500</y>
+      <y>340</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -76,7 +76,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>500</y>
+      <y>340</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -88,8 +88,8 @@
    <widget class="QPushButton" name="pushButton_Volume">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>500</y>
+      <x>430</x>
+      <y>340</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -101,66 +101,14 @@
    <widget class="QSlider" name="horizontalSlider_Volume">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>520</y>
-      <width>160</width>
+      <x>490</x>
+      <y>360</y>
+      <width>111</width>
       <height>16</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QSlider" name="horizontalSlider_Duration">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>470</y>
-      <width>641</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_current_Time">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>470</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>00:00:00</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_Total_Time">
-    <property name="geometry">
-     <rect>
-      <x>730</x>
-      <y>470</y>
-      <width>61</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>00:00:00</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>550</y>
-      <width>781</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>QRL: </string>
     </property>
    </widget>
   </widget>
@@ -170,7 +118,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>801</width>
+     <width>614</width>
      <height>21</height>
     </rect>
    </property>
@@ -179,12 +127,18 @@
      <string>Select file</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="actionOpen_folder"/>
    </widget>
    <addaction name="menuSelect_file"/>
   </widget>
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
+   </property>
+  </action>
+  <action name="actionOpen_folder">
+   <property name="text">
+    <string>Open  folder</string>
    </property>
   </action>
  </widget>
