--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>863</width>
-    <height>452</height>
+    <height>468</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -37,7 +37,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>340</y>
+      <y>370</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -50,7 +50,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>340</y>
+      <y>370</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -63,7 +63,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>340</y>
+      <y>370</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -76,7 +76,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>340</y>
+      <y>370</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -89,7 +89,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>340</y>
+      <y>370</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -102,8 +102,8 @@
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>360</y>
-      <width>111</width>
+      <y>390</y>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -134,17 +134,17 @@
      <string>Current playlist</string>
     </property>
    </widget>
-   <widget class="QLabel" name="current">
+   <widget class="QSlider" name="horizontalSlider">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>350</y>
-      <width>231</width>
-      <height>20</height>
+      <x>10</x>
+      <y>340</y>
+      <width>601</width>
+      <height>19</height>
      </rect>
     </property>
-    <property name="text">
-     <string>TextLabel</string>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
